--- a/R_ProstateCancer_DESeq2.ipynb
+++ b/R_ProstateCancer_DESeq2.ipynb
@@ -6,7 +6,7 @@
       "name": "R_ProstateCancer_DESeq2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOH4sCMIyxE7Mn4s4jYukrk",
+      "authorship_tag": "ABX9TyOcoEvSYODjN3CPGDKyrnms",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -712,6 +712,28 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "write.table(mrna_df, \"/content/Results/mrna_df.txt\", quote = F, sep = \"\\t\")"
+      ],
+      "metadata": {
+        "id": "U4x7Mqmdd5nV"
+      },
+      "execution_count": 81,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "write.table(mrna_meta, \"/content/Results/mrna_meta.txt\", quote = F, sep = \"\\t\")"
+      ],
+      "metadata": {
+        "id": "M9Z7VHydeOaT"
+      },
+      "execution_count": 83,
+      "outputs": []
     },
     {
       "cell_type": "code",
